--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-				<cloudHubDeployment>
+				<cloudHub2Deployment>
 					<uri>https://anypoint.mulesoft.com</uri>
 					<muleVersion>4.4.0</muleVersion>
 					<username>${anypoint.username}</username>
@@ -41,7 +41,7 @@
 					<region>us-east-2</region>
 					<workers>1</workers>
 					<objectStoreV2>true</objectStoreV2>
-				</cloudHubDeployment>
+				</cloudHub2Deployment>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -108,4 +108,5 @@
 	</pluginRepositories>
 
 </project>
+
 
