--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
 			<version>1.3.0</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
+		<dependency>
+  			<groupId>com.github.everit-org.json-schema</groupId>
+  			<artifactId>org.everit.json.schema</artifactId>
+  			<version>1.12.2</version>
+</dependency>
 	</dependencies>
 
 	<repositories>
@@ -112,6 +117,7 @@
 	</pluginRepositories>
 
 </project>
+
 
 
 
