Add Nexus Public Repository to pom.xml
Added Nexus Public Repository to the POM file.

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
 		    <id>central</id>
 		    <url>https://repo.maven.apache.org/maven2</url>
 		</repository>
+		<repository>
+        <id>Nexus</id>
+        <name>Nexus Public Repository</name>
+        <url>https://repository-master.mulesoft.org/nexus/content/groups/public/</url>
+        <layout>default</layout>
+    </repository>
 	</repositories>
 
 	<pluginRepositories>
@@ -117,6 +123,7 @@
 	</pluginRepositories>
 
 </project>
+
 
 
 
