--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 			<version>1.3.0</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
-	<dependencies>
+	</dependencies>
 	<repositories>
 		<repository>
 			<id>anypoint-exchange-v3</id>
@@ -108,6 +108,7 @@
 	</pluginRepositories>
 
 </project>
+
 
 
 
