--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,11 @@
 			<url>https://repository.mulesoft.org/releases/</url>
 			<layout>default</layout>
 		</repository>
-		
+		<repository>
+    <id>central</id>
+    <url>https://repo.maven.apache.org/maven2</url>
+  </repository>
+
 	</repositories>
 
 	<pluginRepositories>
@@ -108,6 +112,7 @@
 	</pluginRepositories>
 
 </project>
+
 
 
 
